# ghostpost

./: README.md  pyproject.toml
ghostpost_app/: admin.py  forms.py  models.py  views.py
ghostpost_app/migrations/: 0001_initial.py  0002_remove_boastsandroasts_votes.py
ghostpost_project/: settings.py  urls.py
templates/: boasts.html  createpost.html  index.html  navbar.html  roasts.html  sort.html
